--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -463,6 +463,8 @@ li .post-meta-description { color: rgba(255, 255, 255, 0.69) !important; }
 
 /*-----------------------------------*/
 /*----- ADD YOUR STYLES BELOW -------*/
+body { background: linear-gradient(#0e071b, #230a4d); }
+
 .language-python + .language-plaintext { border-left: 1px solid grey; margin-left: 1rem !important; }
 
 [class^="language-"]:not(.language-plaintext) pre, [class^="language-"]:not(.language-plaintext) code { background-color: #323443 !important; color: #f8f8f2; }
