--- a/_sass/minima/custom-styles.scss
+++ b/_sass/minima/custom-styles.scss
@@ -8,9 +8,9 @@
 /*-----------------------------------*/
 /*----- ADD YOUR STYLES BELOW -------*/
 
-body {
-    background:linear-gradient(#0e071b, #230a4d);
-}
+// body {
+//     background:linear-gradient(#0e071b, #230a4d);
+// }
 
 // If you want to turn off dark background for syntax highlighting, comment or delete the below line.
 @import "minima/fastpages-dracula-highlight"; 
